--- a/angular.json
+++ b/angular.json
@@ -18,14 +18,25 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [
+            "assets": [  
+              {
+              "glob": "**/*",
+              "input": "/node_modules/leaflet/dist/images",
+              "output": "leaflet/"
+            },
+              
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
               "src/styles.css",
               "node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/leaflet/dist/leaflet.css"
+
+              
+
 
 
             ],
