--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@asymmetrik/ngx-leaflet": "^5.0.2",
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@swimlane/ngx-datatable": "^14.0.0",
     "angular-datatables": "^7.0.0",
     "bootstrap": "^4.3.1",
@@ -30,6 +32,7 @@
     "datatables.net-dt": "^1.10.19",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
     "ng2-rut": "^0.3.2",
@@ -47,6 +50,7 @@
     "@types/datatables.net": "^1.10.17",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.4.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
